Add credit to email

--- a/src/email_templates/transactional.html
+++ b/src/email_templates/transactional.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--suppress HtmlUnknownAttribute, HtmlDeprecatedAttribute, CssRedundantUnit, HtmlUnknownTag, CssOverwrittenProperties, HtmlUnknownTarget, HtmlDeprecatedTag -->
+<!-- This file was taken from https://github.com/sendgrid/email-templates/blob/master/dynamic-templates/transactional-actions/call_to_action.html -->
+<!-- Some tweaks by me to fit branding style -->
 <html lang="en" data-editor-version="2" class="sg-campaigns" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>WhoAmI Email</title>
