--- a/src/email_templates/transactional.html
+++ b/src/email_templates/transactional.html
@@ -73,7 +73,7 @@
     <!--End Head user entered-->
 </head>
 <body>
-<center class="wrapper" data-link-color="#1188E6" data-body-style="font-size: 14px; font-family: arial; color: #000000; background-color: #ebebeb;">
+<div class="wrapper" data-link-color="#1188E6" data-body-style="font-size: 14px; font-family: arial; color: #000000; background-color: #ebebeb;">
     <div class="webkit">
         <table cellpadding="0" cellspacing="0" border="0" width="100%" class="wrapper" bgcolor="#ebebeb">
             <tr>
@@ -176,6 +176,6 @@
             </tr>
         </table>
     </div>
-</center>
+</div>
 </body>
 </html>
